@@ -6,6 +6,7 @@ V RF.01.41.18.Mod (2018-04-08)
 - removed INCLUDE_DEBUG_NO_MOVE
 - removed DEBUG_FORCE_COM_ERROR
 - removed DEBUG_SPLIT
+- removed DEBUG_PRINT
 ...
 
 V RF.01.41.17.Mod (2018-04-02) 
